sfdx-source/isvte_falcon/main/default/objects/DriveWealth__c/DriveWealth__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>DriveWealth</label>
</CustomObject>