sfdx-source/isvte_falcon/main/default/objects/DriveWealth__c/fields/Referral_Code__c.field-meta.xml
<CustomField>
    <fullName>Referral_Code__c</fullName>
    <label>Referral Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>