sfdx-source/isvte_falcon/main/default/objects/DriveWealth__c/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <label>User ID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>