sfdx-source/isvte_falcon/main/default/objects/DriveWealth__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <label>Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>